--- a/manager.client/src/app/home/home.component.html
+++ b/manager.client/src/app/home/home.component.html
@@ -1,4 +1,12 @@
-<h2>Welcome</h2>
-<p>Try out these tools to improve your Fantasy premier league ranking</p>
-
-<team-search></team-search>
+<main>
+  <div class="splash">
+    <div>
+      <div class="shoulderline">Fantasy Premier League</div>
+      <!-- <h1 class="headline">ANALYST</h1> -->
+      <svg viewBox="0 0 450 50">
+        <text x="50%" y="50">ANALYST</text>
+      </svg>
+    </div>
+  </div>
+  <team-search></team-search>
+</main>
