--- a/manager.client/src/app/nav/nav.component.css
+++ b/manager.client/src/app/nav/nav.component.css
@@ -11,10 +11,9 @@
     background-color: var(--background);
     height: 4rem;
 
-    border-image: linear-gradient(to right, var(--accent-primary), var(--accent-secondary) 50%);
+    /* border-image: linear-gradient(to right, var(--accent-primary), var(--accent-secondary) 50%);
     border-image-slice: 1;
-
-    border-bottom: 2px solid;
+    border-bottom: 2px solid; */
 }
 
 .nav-page {
@@ -29,4 +28,19 @@
 .nav-page:hover {
     background-color: rgba(255, 255, 255, 0.1);
     color: var(--accent-primary);
+}
+
+.team-nav-display {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.team-name {
+    color: var(--accent-primary);
+    margin-right: 0.5rem;
+}
+
+.team-nav-display>svg {
+    fill: var(--accent-primary);
 }
