--- a/manager.client/src/app/league/league.component.html
+++ b/manager.client/src/app/league/league.component.html
@@ -1,3 +1,36 @@
-<div *ngIf="!leagueId">
-  <team-search></team-search>
+<div *ngIf="displayOptions && teamData" class="display-options">
+  <div class="modal-options">
+    <h2>Please choose a league</h2>
+    <div *ngFor="let league of teamData.leagues">
+      <div class="league-option" (click)="selectLeague(league.id)">
+        <div class="league-title">{{ league.name }}</div>
+        <div class="flex-between">
+          <div class="league-members">Members: {{ league.rank_count }}</div>
+          <div class="league-members">Position: {{ league.entry_rank }}</div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
+<main>
+  <div *ngIf="leagueData" class="table">
+    <h2 class="table-title">Current Stangings</h2>
+    <ul *ngFor="let league of leagueData.standings.results">
+      <li class="table-entry">
+        <div class="table-entry-left">
+          <div>
+            <div class="table-team-position">{{ league.rank }}</div>
+          </div>
+          <div>
+            <div class="table-team-name">{{ league.entry_name }}</div>
+            <div class="table-player-name">{{ league.player_name }}</div>
+          </div>
+        </div>
+        <div>
+          <div class="table-week-points">{{ league.event_total }}</div>
+          <div class="table-total-points">{{ league.total }}</div>
+        </div>
+      </li>
+    </ul>
+  </div>
+</main>
