--- a/manager.client/src/app/components/search-id/search-id.component.css
+++ b/manager.client/src/app/components/search-id/search-id.component.css
@@ -5,6 +5,7 @@
     border-radius: var(--border-radius);
     border: none;
     font-size: 1.2rem;
+    box-shadow: 0 0 10px var(--accent-primary);
 }
 
 .input-search:focus {
@@ -41,10 +42,12 @@
 }
 
 .profile {
+    width: 50%;
     margin-top: 2rem;
     background-color: var(--darker-background);
     border-radius: var(--border-radius);
     padding: 1rem;
+    cursor: pointer;
 }
 
 .league-title {
@@ -53,6 +56,7 @@
 }
 
 .leagues {
+    width: 50%;
     background-color: var(--darker-background);
     border-radius: var(--border-radius);
     padding: 1rem;
@@ -77,6 +81,12 @@
 .league-stats {
     display: flex;
     justify-content: space-between;
+    align-items: center;
+}
+
+.search-results {
+    display: flex;
+    flex-direction: column;
     align-items: center;
 }
 
