--- a/manager.client/src/app/home/home.component.html
+++ b/manager.client/src/app/home/home.component.html
@@ -1,4 +1,19 @@
 <main>
+  <div class="graphic">
+    <svg
+      width="1443"
+      height="188"
+      viewBox="0 0 1443 188"
+      preserveAspectRatio="none"
+      fill="none"
+      xmlns="http://www.w3.org/2000/svg"
+    >
+      <path
+        d="M2 137.5C33.5 161.833 102.9 190.5 178.5 150.5C273 100.5 278.5 -4.49999 434 3.00001C589.5 10.5 656.5 147 859 127.5C1061.5 108 1032.37 192.507 1201.5 184C1370.5 175.5 1338 40.5 1442 39"
+        stroke="#D48AFF"
+      />
+    </svg>
+  </div>
   <div class="splash">
     <div>
       <div class="shoulderline">Fantasy Premier League</div>
