--- a/manager.client/src/app/league/league.component.css
+++ b/manager.client/src/app/league/league.component.css
@@ -11,7 +11,7 @@
     background-color: var(--darker-background);
     padding: 2rem;
     border-radius: var(--border-radius);
-
+    width: 50vw;
 }
 
 .league-title {
