--- a/manager.client/src/app/personal/personal.component.html
+++ b/manager.client/src/app/personal/personal.component.html
@@ -2,6 +2,9 @@
   <team-search></team-search>
 </div>
 
-<main>
+<main id="main">
   <fixtures></fixtures>
+  <div class="placeholder">Placeholder</div>
+  <div class="placeholder">Placeholder</div>
+  <div class="placeholder">Placeholder</div>
 </main>
