--- a/manager.client/src/app/components/search-id/search-id.component.css
+++ b/manager.client/src/app/components/search-id/search-id.component.css
@@ -1,6 +1,7 @@
 .input-search {
     color: var(--text-color);
     background-color: var(--darker-background);
+    width: 25rem;
     padding: 0.5rem;
     border-radius: var(--border-radius);
     border: none;
@@ -41,47 +42,76 @@
     margin-right: 1rem;
 }
 
+/** 
+* Search Result Styles
+*/
+
 .profile {
-    width: 50%;
+    width: 25rem;
     margin-top: 2rem;
     background-color: var(--darker-background);
-    border-radius: var(--border-radius);
+    border-radius: var(--border-radius-round);
+    border: 2px solid var(--accent-primary);
     padding: 1rem;
     cursor: pointer;
+
+    transition: background-color 0.25s;
+}
+
+.profile:hover {
+    background-color: var(--light-background);
+}
+
+
+.profile-left {
+    display: flex;
+    align-items: center;
+}
+
+.icon-hint {
+    fill: var(--accent-primary);
+    margin-right: 1rem;
 }
 
 .league-title {
-    padding-bottom: 1rem;
+    padding: 1rem;
     margin-bottom: 1rem;
 }
 
 .leagues {
-    width: 50%;
-    background-color: var(--darker-background);
+    width: 25rem;
     border-radius: var(--border-radius);
-    padding: 1rem;
 }
 
 .league-name {
-    font-size: 1.5rem;
+    font-size: 1.2rem;
+    font-weight: bold;
     margin-bottom: 1rem;
 }
 
 .league-item {
-    background: linear-gradient(90deg, var(--accent-primary), var(--accent-secondary));
+    /* background: linear-gradient(90deg, var(--accent-primary), var(--accent-secondary)); */
     padding: 1rem;
     border-radius: var(--border-radius);
+    border: 2px solid var(--accent-primary);
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     cursor: pointer;
     margin-bottom: 1rem;
+    transition: background-color 0.25s;
+}
+
+.league-item:hover {
+    background-color: var(--light-background);
 }
 
 .league-stats {
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    color: var(--grey-text-color);
 }
 
 .search-results {
@@ -104,6 +134,14 @@
 
     .input-search {
         height: 2.5rem;
+        width: 80%;
+    }
+
+    .profile {
+        width: 80%;
+    }
+
+    .leagues {
         width: 80%;
     }
 }
