--- a/manager.client/src/app/nav/nav.component.css
+++ b/manager.client/src/app/nav/nav.component.css
@@ -26,7 +26,7 @@
 }
 
 .nav-page:hover {
-    background-color: rgba(255, 255, 255, 0.1);
+    background-color: var(--light-background);
     color: var(--accent-primary);
 }
 
