--- a/manager.client/src/app/nav/nav.component.css
+++ b/manager.client/src/app/nav/nav.component.css
@@ -30,6 +30,11 @@
     color: var(--accent-primary);
 }
 
+.site-name {
+    font-weight: bold;
+    color: var(--grey-text-color);
+}
+
 .team-nav-display {
     display: flex;
     justify-content: space-evenly;
