--- a/manager.client/src/app/footer/footer.component.css
+++ b/manager.client/src/app/footer/footer.component.css
@@ -4,7 +4,7 @@
     bottom: 0;
     width: 100%;
     background-color: rgba(0, 0, 0, 0.2);
-    color: white;
+    color: rgb(255, 230, 0);
     text-align: center;
     padding: 10px;
 }
