Graph for an FPL teams perf

--- a/manager.client/src/app/league/league.component.html
+++ b/manager.client/src/app/league/league.component.html
@@ -13,6 +13,6 @@
   <div></div>
   <standings id="standings" class="content" [leagueData]="leagueData"></standings>
   <div class="placeholder">Placeholder</div>
-  <div class="placeholder">Placeholder</div>
+  <league-history [league]="leagueHistory" class="content"></league-history>
   <div class="placeholder">Placeholder</div>
 </main>
