--- a/manager.client/src/app/personal/fixtures/fixtures.component.css
+++ b/manager.client/src/app/personal/fixtures/fixtures.component.css
@@ -57,7 +57,7 @@
     background-color: var(--darker-background);
     padding: 1rem;
     border-radius: var(--border-radius);
-    max-width: 50vw;
+    /* max-width: 50vw; */
 }
 
 .chart-title {
@@ -85,7 +85,7 @@
 }
 
 @media screen and (max-width: 700px) {
-    .fixtures-chart {
-        max-width: 100%
+    .chart-container {
+        width: calc(100vw - 4rem);
     }
 }
