--- a/manager.client/src/app/league/history/history.component.css
+++ b/manager.client/src/app/league/history/history.component.css
@@ -1,7 +1,28 @@
 .chart-container {
-    height: 50vh;
+    height: 90%;
 }
 
 .point-graph {
     padding: 1rem;
+    height: 60vh;
+}
+
+.g-button {
+    border-radius: var(--border-radius);
+    background-color: var(--background);
+    color: var(--text-color);
+    padding: 0.25rem 1rem;
+}
+
+.buttons {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 1rem;
+}
+
+@media screen and (max-width: 700px) {
+    .chart-container {
+        width: calc(100vw - 4rem);
+    }
 }
