--- a/manager.client/src/app/league/league.component.css
+++ b/manager.client/src/app/league/league.component.css
@@ -1,7 +1,3 @@
-#main {
-    padding: 2rem;
-}
-
 .content {
     background-color: var(--darker-background);
     border-radius: var(--border-radius);
@@ -28,13 +24,14 @@
 
 @media screen and (max-width: 1000px) {
     #main {
-        grid-template-columns: 1fr 0.5fr;
+        grid-template-columns: 1fr 1fr;
+        padding: 0;
     }
 }
 
 @media screen and (max-width: 700px) {
     #main {
-        grid-template-columns: 1fr;
+        grid-template-columns: 100vw;
     }
 
     .modal-options {
