--- a/manager.client/src/app/nav/nav.component.css
+++ b/manager.client/src/app/nav/nav.component.css
@@ -8,12 +8,15 @@
     justify-content: space-evenly;
     align-items: center;
 
-    background-color: var(--background);
+    background-color: var(--translucent-background);
+    backdrop-filter: blur(2px);
     height: 4rem;
 
     /* border-image: linear-gradient(to right, var(--accent-primary), var(--accent-secondary) 50%);
     border-image-slice: 1;
     border-bottom: 2px solid; */
+
+    z-index: 99;
 }
 
 .nav-page {
