Fixed fixtures content and scaling issues

--- a/manager.client/src/app/league/league.component.html
+++ b/manager.client/src/app/league/league.component.html
@@ -15,4 +15,5 @@
   <div class="placeholder">Placeholder</div>
   <league-history [league]="leagueHistory" class="content"></league-history>
   <div class="placeholder">Placeholder</div>
+  <div class="break"></div>
 </main>
