--- a/manager.client/src/app/home/home.component.css
+++ b/manager.client/src/app/home/home.component.css
@@ -1,15 +1,19 @@
 main {
     height: calc(100vh - 4rem);
     background: linear-gradient(30deg, var(--black), var(--background) 70%);
+    width: 100vw;
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
 .graphic {
     position: absolute;
     bottom: 0;
+    width: 100%;
 }
 
 .graphic svg {
-    width: 100vw;
+    width: 100%;
     height: 100%;
 
     stroke-width: 5px;
