Restyling of personal and league pages

--- a/manager.client/src/app/components/search-id/search-id.component.css
+++ b/manager.client/src/app/components/search-id/search-id.component.css
@@ -91,6 +91,7 @@
 
 .league-item {
     /* background: linear-gradient(90deg, var(--accent-primary), var(--accent-secondary)); */
+    background-color: var(--darker-background);
     padding: 1rem;
     border-radius: var(--border-radius);
     border: 2px solid var(--accent-primary);
