--- a/manager.client/src/app/personal/personal.component.html
+++ b/manager.client/src/app/personal/personal.component.html
@@ -3,8 +3,12 @@
 </div>
 
 <main id="main">
-  <fixtures></fixtures>
-  <div class="placeholder">Placeholder</div>
-  <div class="placeholder">Placeholder</div>
-  <div class="placeholder">Placeholder</div>
+  <div id="row-1">
+    <fixtures id="fixtures" class="content"></fixtures>
+    <div class="placeholder content">Placeholder</div>
+  </div>
+  <div id="row-2">
+    <div class="placeholder content">Placeholder</div>
+    <div class="placeholder content">Placeholder</div>
+  </div>
 </main>
