--- a/manager.client/src/app/league/standings/standings.component.css
+++ b/manager.client/src/app/league/standings/standings.component.css
@@ -15,6 +15,7 @@
     justify-content: space-between;
     /* margin: 0.5rem 0rem; */
     padding: 0.5rem;
+    border-bottom: 1px solid var(--grey-text-color);
 }
 
 .table-player-name {
