--- a/manager.client/src/app/personal/fixtures/fixtures.component.css
+++ b/manager.client/src/app/personal/fixtures/fixtures.component.css
@@ -70,7 +70,8 @@
 }
 
 .chart-container {
-    height: calc(100% - 1.5rem);
+    height: 45vh;
+    width: 40vw;
 }
 
 .chart-legend {
@@ -82,6 +83,12 @@
 .chart-legend>svg {
     width: 1rem;
     margin: 0 0.2rem;
+}
+
+@media screen and (min-width: 1200px) {
+    .chart-container {
+        width: 40vw;
+    }
 }
 
 @media screen and (max-width: 700px) {
